Fixed empty strings and handled default boolean values